2011-06-09  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/tc-arm.c (do_ldrd): Warn in unpredictable cases.

2011-06-03  Arnaud Patard  <arnaud.patard@rtp-net.org>

	PR gas/12698
	* config/tc-arm.c (parse_psr): Set m_profile to false when
	assembling for any architecture.

2011-06-02  Jie Zhang jie@codesourcery.com
	    Nathan Sidwell nathan@codesourcery.com

	* config/tc-arm.c (parse_address_main): Handle -0 offsets.
	(encode_arm_addr_mode_2): Set default sign of zero here ...
	(encode_arm_addr_mode_3): ... and here.
	(encode_arm_cp_address): ... and here.
	(md_apply_fix): Use default sign of zero here.

2011-06-02  Nick Clifton  <nickc@redhat.com>

	* as.c: Fix spelling typo.
	* read.c: Likewise.
	* config/tc-ppc.c: Likewise.
	* po/gas.pit: Regenerate.

2011-05-31  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_cpus): Add Cortex-R5.
	(arm_extensions): Allow idiv on ARMv7-R.
	* doc/c-arm.text: Update idiv extension restrictions.

2011-05-31  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_force_relocation): Resolve all pc-relative
	loads.

2011-05-31  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_t_branch): Avoid relaxing branches to constant
	addresses.

2011-05-31  Paul Brook  <paul@codesourcery.com>
	Nathan Sidwell  <nathan@codesourcery.com>

	* config/tc-arm.c (fix_new_arm): Create an absolute symbol for
	pc-relative fixes to constants.
	* config/tc-arm.h (TC_FORCE_RELOCATATION_ABS): Define.

2011-05-27  Nick Clifton  <nickc@redhat.com>

	* config/tc-s390.c (md_begin): Remove unused variable dup_insn.

2011-05-24  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/tc-s390.c (md_gather_operands): Fix check for floating
	register pair operands.

2011-05-24  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/tc-s390.c (md_gather_operands): Emit an error for odd
	numbered registers used as register pair operand.

2011-05-23  Nick Clifton  <nickc@redhat.com>
